# Paper-Agent-main

./: README.md  main.py  pyproject.toml
.claude/: settings.local.json
output/: report_20260530_202204.md  report_20260531_105412.md  report_20260531_191241.md
paper_agent/: __init__.py  config.py  models.py  orchestrator.py  prompts.py
paper_agent/agents/: retrieval_agent.py  review_agent.py
paper_agent/api/: knowledge_api.py
paper_agent/chains/: analysis_chain.py  reading_chain.py  report_chain.py  search_chain.py  writing_chain.py
paper_agent/knowledge/: kb_embedder.py  kb_manager.py
paper_agent/services/: arxiv_client.py  semantic_scholar_client.py  vector_store.py
web/src/: App.vue  AppRoot.vue
web/src/components/: CreateDatabaseModal.vue
web/src/router/: index.js
web/src/views/: History.vue  HomePage.vue
