[tool.poetry]
name = "Paper-Agent-Simple"
version = "2.0.0"
description = "Paper-Agent 简化版 - 基于 LangChain LCEL 的论文调研报告生成系统"
authors = ["Paper-Agent"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# 核心 - LangChain
langchain-openai = ">=0.3.0,<1.0.0"
langchain-core = ">=0.3.0,<1.0.0"
# Web 框架
fastapi = ">=0.115.0,<1.0.0"
sse-starlette = ">=3.0.0,<4.0.0"
uvicorn = ">=0.34.0,<1.0.0"
# 论文检索
arxiv = ">=2.1.0,<3.0.0"
# 向量数据库
chromadb = ">=1.0.0,<2.0.0"
# 数据处理
scikit-learn = ">=1.5.0,<2.0.0"
numpy = ">=1.26.0,<3.0.0"
pydantic = ">=2.0.0,<3.0.0"
# 配置管理
python-dotenv = ">=1.0.0,<2.0.0"
pyyaml = ">=6.0.0,<7.0.0"
# 重试机制
tenacity = ">=9.0.0,<10.0.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
